--- a/index.html
+++ b/index.html
@@ -1,3 +1,105 @@
-<html>
-<body>TEST</body>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Matusiak.me</title>
+
+	<meta name="author" content="Radoslaw Matusiak" />
+
+	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	</style>
+
+	<!--[if IE]>
+		<script type="text/javascript">
+			 var console = { log: function() {} };
+		</script>
+	<![endif]-->
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="js/scrolloverflow.min.js"></script>
+	<script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
+
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$('#fullpage').fullpage({
+				anchors: ['welcome', 'fuzzmyapp', 'projects', 'contact'],
+				sectionsColor: ['#000000', '#2B2929', '#ffffff', '#000000'],
+				navigation: true,
+				navigationPosition: 'right',
+				navigationTooltips: ['Welcome', 'FuzzMyApp', 'Projects', 'Contact']
+			});
+		});
+	</script>
+
+</head>
+<body>
+	<div id="fullpage">
+		<div class="section " id="welcome_section">
+			<div class="welcome">
+				<div>
+					<p>Hello. My name is Radoslaw Matusiak and I am a software developer. I live in Poland.</p>
+					<p>Use arrows to navigate.</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="section " id="fma_section">
+			<div class="fma">
+				<div id="fma_left">
+					&nbsp;
+				</div>
+				<div id="fma_right">
+					<p>I am a co-founder of software security company <a href="http://fuzzmyapp.com">FuzzMyApp</a>.</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="section" id="projects_section">
+			<div class="slide" id="projects_main">
+				<div class="projects">
+					<h1>Projects</h1>
+					<p>
+						My personal projects
+					</p>
+				</div>
+			</div>
+
+			<div class="slide" id="loophole">
+				<h1>loophole</h1>
+				<p>Polar devices API and CLI</p>
+				<p><a href="https://github.com/rsc-dev/loophole">GitHub</a>
+			</div>
+			
+			<div class="slide" id="ishtar">
+				<h1>Ishtar</h1>
+				<p>.NET applications hacking toolset</p>
+				<p><a href="https://github.com/rsc-dev/ishtar">GitHub</a>
+			</div>
+			
+			<div class="slide" id="pbd">
+				<h1>pbd</h1>
+				<p>Python module to disassemble serialized protocol buffers descriptors</p>
+				<p><a href="https://github.com/rsc-dev/pbd">GitHub</a>
+			</div>
+			<div class="slide" id="pyamaha">
+				<h1>pyamaha</h1>
+				<p>Python implementation of Yamaha Extended Control API Specification</p>
+				<p><a href="https://github.com/rsc-dev/pyamaha">GitHub</a>
+			</div>
+		</div>
+		
+		<div class="section" id="contact_section">
+			<div class="contact">
+				<p>radoslaw@matusiak.me <br>
+				<a href="https://keybase.io/rsc">keybase.io</a>
+				<br></br>
+				<a href="https://www.linkedin.com/in/radoslawmatusiak/">linkedin.com</a>
+				</p>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
