Some spooky stuff

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		
 		<div class="section" id="contact_section">
 			<div class="contact">
-				<p>radoslaw@matusiak.me <br>
+				<p><x>rados<x>law@matu<x>siak.<x>me <br>
 				<a href="https://keybase.io/rsc">keybase.io</a>
 				<br></br>
 				<a href="https://www.linkedin.com/in/radoslawmatusiak/">linkedin.com</a>
